<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:id="@+id/about_layout"
    >
    <TextView 
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#000000"
        />
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center"
        />
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/about_version"
        android:gravity="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />
     <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="#000000"
        android:text="@string/about_problem"
        android:gravity="center"
        />
      <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="#000000"
        android:text="fairjmflyer@gmail.com"
        android:autoLink="email"
        android:gravity="center"
        />
      <View 
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />
      <View 
          android:layout_marginLeft="5dp"
          android:layout_marginRight="5dp"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="#000000"
          />
       <View 
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />

      <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13dp"
        android:textColor="#000000"
        android:text="@string/about_detail1"
        android:gravity="center"
        />
      <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13dp"
        android:textColor="#000000"
        android:text="@string/about_detail2"
        android:gravity="center"
        />

</LinearLayout>